--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "node --watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "vercel-build": "echo Hello"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
